--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 </head>
 <body oneclick="mifuncion()">
     <div id="left">
-        <img id="bottomleftmarco" href="images/marco.png">
-        <img id="bottomleftimg" href="images/3milk.jpeg">
-        <a id="bottonleftdescription" 
+        <img id="bottomleftmarco" src="images/marco.png">
+        <img id="bottomleftimg" src="images/3milk.jpeg">
+        <a id="bottonleftdescription" href="recipes/3milks.html" target="_self">
+            <p id="bottomleftdescription">The tres leches cake, tart or cake is a traditional Latin American dessert. 
+                It consists of a sponge bathed in three types of milk: evaporated milk, milk cream and condensed milk, 
+                which give it its name. It is usually accompanied with an egg white meringue and maraschino cherries 
+                and sprinkled with ground cinnamon. Usually the recipe does not call for butter and therefore has a spongy 
+                texture.</p>
+        </a>
 
 
     </div>
