--- a/index.html
+++ b/index.html
@@ -7,17 +7,31 @@
 </head>
 <body oneclick="mifuncion()">
     <div id="left">
-        <img id="bottomleftmarco" src="images/marco.png">
-        <img id="bottomleftimg" src="images/3milk.jpeg">
-        <a id="bottonleftdescription" href="recipes/3milks.html" target="_self">
-            <p id="bottomleftdescription">The tres leches cake, tart or cake is a traditional Latin American dessert. 
+        <img id="leftmarco" src="images/marco.png">
+        <img id="leftimg" src="images/3milk.jpeg">
+        <a id="left" href="recipes/3milks.html" target="_self">
+            <div div="lefthovertitle">3 Leches</div>
+            <p id="leftdescription">The tres leches cake, tart or cake is a traditional Latin American dessert. 
                 It consists of a sponge bathed in three types of milk: evaporated milk, milk cream and condensed milk, 
                 which give it its name. It is usually accompanied with an egg white meringue and maraschino cherries 
                 and sprinkled with ground cinnamon. Usually the recipe does not call for butter and therefore has a spongy 
                 texture.</p>
         </a>
-
-
+    </div>
+    <div id="mid">
+        <header>
+            <h1 id="title">Recipes For my Amoshito</h1>
+            <img id="subrayado" src="">
+        </header>
+        <img id="midmarco" src="images/marco.png">
+        <img id="midimg" src="">
+        <a id="mid" href="recipes/salchipapa.html" target="_self">
+            <div id="midhovertitle">Salchipapa</div>
+            <p id="middescription">Salchipapa is a fast food consisting of fried slices of sausage and French fries, 
+                popular in Latin America. It is usually consumed with different accompaniments such as ketchup, mustard, mayonnaise, 
+                pineapple sauce, bbq sauce, green sauce, olive cream, chili/chili pepper, oregano, fried egg, shredded chicken, 
+                bacon, chop pieces, bbq wings, corn, pineapple, ham, different cheeses, tomato, lettuce or coleslaw.</p>
+        </a>
     </div>
 </body>
 </html>
