--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@700&display=swap" rel="stylesheet">
     <title>Odin Recipes</title>
 </head>
 <body oneclick="mifuncion()">
@@ -21,10 +24,10 @@
     <div id="mid">
         <header>
             <h1 id="title">Recipes For my Amoshito</h1>
-            <img id="subrayado" src="">
+            <img id="subrayado" src="images/subrayado.png">
         </header>
         <img id="midmarco" src="images/marco.png">
-        <img id="midimg" src="">
+        <img id="midimg" src="images/salchipapa.jpg">
         <a id="mid" href="recipes/salchipapa.html" target="_self">
             <div id="midhovertitle">Salchipapa</div>
             <p id="middescription">Salchipapa is a fast food consisting of fried slices of sausage and French fries, 
