--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@700&display=swap" rel="stylesheet">
+
     <title>Odin Recipes</title>
 </head>
 <body oneclick="mifuncion()">
     <div id="left">
         <img id="leftmarco" src="images/marco.png">
         <img id="leftimg" src="images/3milk.jpeg">
-        <a id="left" href="recipes/3milks.html" target="_self">
-            <div div="lefthovertitle">3 Leches</div>
+        <a id="leftc" href="recipes/3milks.html" target="_self">
+            <div div="lefthovertitle"><h3>3 Leches</h3></div>
             <p id="leftdescription">The tres leches cake, tart or cake is a traditional Latin American dessert. 
                 It consists of a sponge bathed in three types of milk: evaporated milk, milk cream and condensed milk, 
                 which give it its name. It is usually accompanied with an egg white meringue and maraschino cherries 
@@ -28,13 +29,32 @@
         </header>
         <img id="midmarco" src="images/marco.png">
         <img id="midimg" src="images/salchipapa.jpg">
-        <a id="mid" href="recipes/salchipapa.html" target="_self">
-            <div id="midhovertitle">Salchipapa</div>
+        <a id="midc" href="recipes/salchipapa.html" target="_self">
+            <div id="midhovertitle"><h3>Salchipapa></h3></div>
             <p id="middescription">Salchipapa is a fast food consisting of fried slices of sausage and French fries, 
                 popular in Latin America. It is usually consumed with different accompaniments such as ketchup, mustard, mayonnaise, 
                 pineapple sauce, bbq sauce, green sauce, olive cream, chili/chili pepper, oregano, fried egg, shredded chicken, 
                 bacon, chop pieces, bbq wings, corn, pineapple, ham, different cheeses, tomato, lettuce or coleslaw.</p>
         </a>
     </div>
+    <div id="right">
+        <img id="rightmarco" src="images/marco.png">
+        <img id="rightimg" src="images/tacos.jpg">
+        <a id="rigthc" src="recipes/tacospastor.html" target="_self">
+            <div id="righthovertitle"><h3>Tacos al pastor</h3></div>
+            <p id="rightdescription">Tacos al pastor or trompo are the most popular variety of tacos in most of Mexico. In July 2019, 
+                they were chosen as the best food in the world by the gastronomic guide site Taste Atlas. the shawarma, introduced by 
+                Lebanese Christian immigrants.</p> 
+
+        </a>
+    </div>
+    <footer id="piso">
+        <p id="pepito">Copyright</p>
+        <a href="index.html" target="_self"><p id="va">Vuelta arriba</p></a>
+        <a href="" target="_blank"><p>Contactame</p></a>
+    </footer>
+    
 </body>
+<script>
+</script>
 </html>
