--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                 texture.</p>
             </a>
         </div>
-        <div id="mid">
+        <div id="midc">
             <header>
                 <h1 id="title">Recipes For my Amoshito</h1>
                 <img id="subrayado" src="images/subrayado.png">
             </header>
+            <div id="mid">
             <section class="container">
                 <img id="midmarco" src="images/marco.png">
                 <img id="midimg" src="images/salchipapa.jpg">
@@ -38,11 +39,12 @@
                 bacon, chop pieces, bbq wings, corn, pineapple, ham, different cheeses, tomato, lettuce or coleslaw.</p>
                 </a>
             </section>
+            </div>
         </div>
         <div id="right">
             <img id="rightmarco" src="images/marco.png">
             <img id="rightimg" src="images/tacos.jpg">
-            <a id="rigthc" src="recipes/tacospastor.html" target="_self">
+            <a id="rigthc" href="recipes/tacospastor.html" target="_self">
                 <div id="righthovertitle"><h3>Tacos al pastor</h3></div>
                 <p id="rightdescription">Tacos al pastor or trompo are the most popular variety of tacos in most of Mexico. In July 2019, 
                 they were chosen as the best food in the world by the gastronomic guide site Taste Atlas. the shawarma, introduced by 
@@ -52,8 +54,8 @@
         </div>
         <footer id="piso">
             <p id="pepito">Copyright</p>
-            <a href="index.html" target="_self"><p id="va">Vuelta arriba</p></a>
-            <a   a href="" target="_blank"><p>Contactame</p></a>
+            <!-- <a href="index.html" target="_self"><p id="va">Vuelta arriba</p></a>
+            <a   a href="" target="_blank"><p>Contactame</p></a> -->
         </footer>
     </body>
 </html>
