--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
             </a>
         </div>
-        <footer id="piso">
-            <p id="pepito">Copyright</p>
-            <!-- <a href="index.html" target="_self"><p id="va">Vuelta arriba</p></a>
-            <a   a href="" target="_blank"><p>Contactame</p></a> -->
-        </footer>
+        <footer>
+        <p id="Copy">Copyrigth 2021
+            <a id="Arriba" href="index.html">Ir arriba</a>
+            <a id="Contacto" href="index.html">Contactame</a>
+        </p>
+    </footer>
     </body>
 </html>
