--- a/recipes/tacospastor.html
+++ b/recipes/tacospastor.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <header class="container">
-            <h1 id="title">Postre 3 leches</h1>
+            <h1 id="title">Tacos al pastor</h1>
             <img src="tacos.jpg" alt="tacos">
         </header>
         <main>
@@ -39,15 +39,15 @@
                 </ul>
             </article>
             <article class="container">
-                <h4>How to make Cold Tres Leches Dessert:</h4>
+                <h4>How to make Cold Tacos</h4>
                 <ol>
-                    <li>To prepare the tres leches dessert with cookies, start by dissolving the unflavored gelatin in a cup of warm water.</li>
-                    <li>Bring the water with the dissolved gelatin to a boil and let the mixture cool. Then, blend the condensed milk, the milk cream, the liquid milk and the dissolved gelatin .
-
-                        Tip: Milk cream is also known by the name of cream in some European countries.</li>
-                    <li>Meanwhile, in a preferably glass container, build a base with the Maria or milk cookies . You can moisten them in the same milk mixture that you already have prepared. Don't over-soak them as they will split. You can also make the tres leches dessert with Ducales cookies.</li>
-                    <li>When you have the cookie base ready, add the contents of the blender. You should put the preparation in the refrigerator until the mixture sets. The cold tres leches dessert process can take a day.</li>
-                    <li>When you serve the cold tres leches dessert , remember that you can decorate it with a little Swiss meringue , chocolate ganache or a red fruit coulis . If you like, you can also try our tres leches cake recipe . Enjoy!</li>
+                    <li>Place the chiles in a pot and cover with water. Boil over medium heat for about 15 minutes or until soft. Let them cool and finally remove the water.</li>
+                    <li>Place the chiles, the vinegar, the pineapple juice with the spices and the achiote paste in the blender. Blend until a very smooth sauce is formed. Pour the sauce slowly through a fine sieve to get a nice smooth texture. At that point, you can taste the sauce just to make sure the salt is enough for your taste.</li>
+                    <li>Season the meat with salt and pepper. Place the sauce and steaks in a large bowl, marinate the meat, or use a pastry brush, brush the sauce on each side of the steaks.</li>
+                    <li>Marinate for at least 4 hours or leave overnight (believe me it tastes better)</li>
+                    <li>Place the meat in the vertical rotisserie, prepare the meat by interspersing with a few slices of onion and pineapple. Allow the marinade to drain for about 20 minutes before starting to cook on the rotisserie. 1 hour is enough to cook 1 kilo of meat. Once cooked, cut the meat with a sharp knife and place it in a hot pan to give it that golden flavor as they do in taco shops in Mexico.</li>
+                    <li>The second option is to use the broiler in your oven. Cut the meat as for skewers, place it on a skewer and add slices of onion and pineapple between the meat. Since the meat is cut into smaller portions this method will take about 20 minutes to cook turning at least 2 times during cooking.</li>
+                    <li>Now this is the easiest since almost anyone has a frying pan or skillet at home. Once the meat has marinated, cut it into small thin strips. Be sure to skim off any excess marinade sauce. Heat skillet and add 1 - 2 tablespoons of oil until hot; just enough so that when the meat is placed it will splatter a little. Add the onion and pineapple slices throughout the meat to cook. Also be sure to flip the meat as needed to prevent the meat from sticking to the pan. Cook for about 12-15 minutes.</li>
                 </ol>
             </article>
             <footer>
